TestSuite/errors/err0097.pas
procedure Test;
var i : integer;
begin
for i := 1 to 10 do
 i := i+1;
end;

begin
end.